data/derived/comb/progs/unify/prog5063.ml.out
Characters 84-91:
  in (g x,x), b);;
     ^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
